fix: fix issue with photo overlapping text on small screen

--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ html {
 
 .container-profile {
   padding: 0 250px 0;
+  text-align: center;
 }
 
 .section {
